samples/_failures_safe/1761667400_b3f606_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_310ef5ab.c: In function ‘main’:
./samples/SAFE/__tmp_310ef5ab.c:147:15: error: expected ‘;’ at end of input
  147 |         printf
      |               ^
      |               ;
./samples/SAFE/__tmp_310ef5ab.c:147:9: error: expected declaration or statement at end of input
  147 |         printf
      |         ^~~~~~
./samples/SAFE/__tmp_310ef5ab.c:147:9: error: expected declaration or statement at end of input
